--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32x32.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512x512.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Newsletter Digest</title>
+    <title>AI Frontiers Digest</title>
   </head>
   <body>
     <div id="root"></div>
